--- a/src/containers/itemshow/component/itemshow.css
+++ b/src/containers/itemshow/component/itemshow.css
@@ -20,3 +20,8 @@
     font-style: unset;
     font-family: Arial, Helvetica, sans-serif;
 }
+@media (max-width:740px){
+    .itemshow__itembox{
+        width: 50%;
+    }
+}
