--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 .blur {
   position: fixed;
   background: rgb(3, 3, 3,0.6); 
@@ -34,6 +33,14 @@
   font-weight: 500;
   color: #184ddd;
   cursor: pointer;
+}
+.boder{
+  border: 0.5px solid black;
+  padding: 5px 5px 0px 5px;
+  margin: 5px;
+}
+.font{
+  font-family: Arial, Helvetica, sans-serif;
 }
 #root{
   display: flex;
