--- a/src/shared/cart/component/cart.css
+++ b/src/shared/cart/component/cart.css
@@ -25,8 +25,64 @@
     margin-top: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    overflow: auto;
+    height: 90%;
 }
 .cart__body-p{
-    border-bottom:1px dotted rgb(175, 175, 175);
+    
     padding-bottom: 15px;
+}
+.cart__body-price{
+    padding: 15px 0;
+    border-top: 2px solid black;
+    font-weight: bold;
+    font-size: 14px;
+    position: relative;
+}
+.cart__body-price-number{
+    position: absolute;
+    top:15px;
+    right: 0px;
+}
+.cart__item{
+    
+    border-top:1px dotted rgb(175, 175, 175);
+    padding: 10px 0;
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 5px 0;
+}
+.cart__item-image{
+    height: 150px;
+}
+.cart__item-name{
+    color: #252a2b;
+    font-weight: lighter;
+    padding: 0;
+    margin: 0px 0px;
+}
+.cart__item-describes{
+    margin-left: 20px;
+}
+.cart__item-price{
+    font-weight: bold;
+}
+.cart__item-button{
+    outline: none;
+    background: white;
+    border: 0.5px solid gray;
+    border-radius: 4px;
+    height: 25px;
+    width: 40px;
+    cursor: pointer;
+    margin-top: 8px;
+}
+.cart__button-thanhtoan{
+    height: 42px;
+    border: none;
+    width: 100%;
+    outline: none;
+    background: black;
+    color: white;
+    cursor: pointer;
 }
