--- a/src/containers/AddItemForm/component/AddItemComponent.module.css
+++ b/src/containers/AddItemForm/component/AddItemComponent.module.css
@@ -15,6 +15,11 @@
     background: white;
     position: relative;
     animation: show 0.3s linear;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 .icon{
     position: absolute;
@@ -22,4 +27,119 @@
     top: 10px;
     font-size: 25px;
     cursor: pointer;
+}
+.addItem_header{
+    height: 80px;
+    width: 95%;
+    margin: 0 auto;
+}
+.addItem_body{
+    flex: 1;
+    
+}
+.addItem_box{
+   
+    background: white;
+    height: 50px;
+    border-radius: 10px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border: 1px solid rgb(202, 202, 202);
+    
+}
+.addItem_nameInput{
+    border: none;
+    outline: none;
+    width: 95%;
+    font-size: 17px;
+}
+.addItem_div{
+    margin: 30px auto;
+    width: 95%;
+    display: flex;
+}
+.tenthuoctinh{
+    top:-20px;
+    left: 10px;
+    position:absolute;
+}
+.addItem_category{
+    width: 90%;
+    outline: none;
+    border: none;
+    font-size: 17px;
+}
+.saveButton{
+    background: black;
+    color: white;
+    height: 50px;
+    width: 10%;
+    margin-left: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.listSize{
+    flex: 1;
+    height: 50px;
+    overflow: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.size{
+    width: 120px;
+    height: 50px;
+    height: 100%;
+    background: white;
+    border: 1px solid rgb(202, 202, 202);;
+    border-radius: 10px;
+    margin-left: 10px;
+    text-align: center;
+    padding-top: 5px;
+    box-sizing: border-box;
+    position: relative;
+}
+.iconSize{
+    position: absolute;
+    top:3px;
+    right: 5px;
+    cursor: pointer;
+}
+.addItem_image{
+    height: 120px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.addItem_imageList{
+    display: flex;
+    flex-wrap: wrap;
+    width: 510px;
+    height: 120px;
+    overflow: auto;
+}
+.footer_saveButton{
+    background: black;
+    color: white;
+    height: 50px;
+    width: 80px;
+    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    cursor: pointer;
+   
+
+}
+.listButton{
+    position: absolute;
+    right: 10px;
+    bottom: 20px;
+    display: flex;
+    width: 200px;
 }
