--- a/src/containers/cartcheckout/component/cartcheckout.css
+++ b/src/containers/cartcheckout/component/cartcheckout.css
@@ -1,171 +1,174 @@
-@keyframes sizeshow{
-    0%{
-        top:-1000px;
-    }
-    100%{
-        top:0px;
-    }
+@keyframes sizeshow {
+  0% {
+    top: -1000px;
+  }
+  100% {
+    top: 0px;
+  }
 }
-.cartckeckout{
-    margin: 35px;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
+.cartckeckout {
+  margin: 35px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
 }
-.cartcheckout__info{
-    width: 55%;
-    border-right: 0.5px solid rgb(224, 221, 221);
-    padding-right: 35px;
+.cartcheckout__info {
+  width: 65%;
+  border-right: 0.5px solid rgb(224, 221, 221);
+  padding-right: 35px;
 }
-.cartcheckout__info-header{
-    
-    height: 35px;
-    width: 100%;
-    background: #f5f5f5;
-    border-radius: 3px;
-    padding-top:7px;
-    padding-left: 10px;
-    box-sizing: border-box;
+.cartcheckout__info-header {
+  height: 35px;
+  width: 100%;
+  background: #f5f5f5;
+  border-radius: 3px;
+  padding-top: 7px;
+  padding-left: 10px;
+  box-sizing: border-box;
 }
-.cartcheckout__info-header-link{
-    text-decoration: none;
-    color: #338dbc;
-    margin-right: 7px;
+.cartcheckout__info-header-link {
+  text-decoration: none;
+  color: #338dbc;
+  margin-right: 7px;
 }
-.cartcheckout__info-header-link:hover{
-    text-decoration: underline;
+.cartcheckout__info-header-link:hover {
+  text-decoration: underline;
 }
-.cartcheckout__info-header-text{
-    margin-left: 7px;
+.cartcheckout__info-header-text {
+  margin-left: 7px;
 }
-.fa-solid.fa-angle-right{
-    position: relative;
-    top:2px;
+.fa-solid.fa-angle-right {
+  position: relative;
+  top: 2px;
 }
-input:focus{
-    outline: none;
-    
+input:focus {
+  outline: none;
 }
-input{
-    padding-left: 10px;
+input {
+  padding-left: 10px;
 }
-.cartcheckout__info-name{
-    width: 100%;
-    height: 40px;
-    border-radius: 4px;
-    border: 1.5px solid #e7e7e7;
-    margin-bottom: 10px;
+.cartcheckout__info-name {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1.5px solid #e7e7e7;
+  margin-bottom: 10px;
 }
-.cartcheckout__info-emailandphone{
-    width: 100%;
-    display: inline-flex;
+.cartcheckout__info-emailandphone {
+  width: 100%;
+  display: inline-flex;
 }
-.cartcheckout__info-email{
-    width: 60%;
-    height: 40px;
-    border-radius: 4px;
-    border: 1.5px solid #e7e7e7;
+.cartcheckout__info-email {
+  width: 60%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1.5px solid #e7e7e7;
 }
-.cartcheckout__info-telephone{
-    width: 40%;
-    height: 40px;
-    position: relative;
-    border-radius: 4px;
-    border: 1.5px solid #e7e7e7;
-    left: 15px;
-    margin-bottom: 10px;
+.cartcheckout__info-telephone {
+  width: 40%;
+  height: 40px;
+  position: relative;
+  border-radius: 4px;
+  border: 1.5px solid #e7e7e7;
+  left: 15px;
+  margin-bottom: 10px;
 }
-.cartcheckout__info-address{
-    width: 100%;
-    height: 40px;
-    border-radius: 4px;
-    border: 1.5px solid #e7e7e7;
-    margin-bottom: 15px;
+.cartcheckout__info-address {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1.5px solid #e7e7e7;
+  margin-bottom: 15px;
 }
-.cartcheckout__info-comment{
-    width: 100%;
-    height: 100px;
-    border: 1.5px solid #e7e7e7;
-    border-radius: 4px;
-    padding-left: 10px;
+.cartcheckout__info-comment {
+  width: 100%;
+  height: 100px;
+  border: 1.5px solid #e7e7e7;
+  border-radius: 4px;
+  padding-left: 10px;
 }
-.cartcheckout__info-comment:focus{
-    outline: none;
+.cartcheckout__info-comment:focus {
+  outline: none;
 }
-.cartcheckout__cart-item{
-    margin: 35px;
-    display: flex;
+.cartcheckout__cart-item {
+  margin: 35px;
+  display: flex;
 }
-.cartcheckout__cart-image{
-    height: 60px;
+.cartcheckout__cart-image {
+  height: 60px;
 }
-.cartcheckout__cart-imagebox{
-    height: 65px;
-    padding-top: 5px;
-    width: 60px;
-    border: 1.5px solid #e7e7e7;
-    text-align: center;
-    border-radius: 4px;
+.cartcheckout__cart-imagebox {
+  height: 65px;
+  padding-top: 5px;
+  width: 60px;
+  border: 1.5px solid #e7e7e7;
+  text-align: center;
+  border-radius: 4px;
 }
-.cartcheckout__cart-iteminfo{
-    font-size: 14px;
-    margin-left: 10px;
+.cartcheckout__cart-iteminfo {
+  font-size: 14px;
+  margin-left: 10px;
 }
-.cartcheckout__cart-shipprice{
-    position: absolute;
-    right: 0;
-    top:0
+.cartcheckout__cart-shipprice {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
-.cartcheckout__cart-ship{
-    position: relative;
-    padding-top:17px ;
-    margin:35px ;
-    border-top:0.5px dotted gray ;
+.cartcheckout__cart-ship {
+  position: relative;
+  padding-top: 17px;
+  margin: 35px;
+  border-top: 0.5px dotted gray;
 }
-.cartcheckout__cart{
-    flex: 1;
+.cartcheckout__cart {
+  flex: 1;
 }
-.cartchekout__cart-buttonthanhtoan{
-
-    height: 40px;
-    color: white;
-    border: none;
-    outline: none;
-    background: black;
-    margin: 35px;
-    text-align: center;
-    padding-top:10px ;
-    box-sizing: border-box;
-    cursor: pointer;
+.cartchekout__cart-buttonthanhtoan {
+  height: 45px;
+  color: white;
+  border: none;
+  outline: none;
+  background: black;
+  margin: 35px;
+  text-align: center;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
 }
-.cartcheckout__cart-listitem{
-    max-height: 450px;
-    overflow: auto;
+.cartchekout__cart-buttonthanhtoan.paypal {
+  background: white;
+  height: unset;
 }
-.cartcheckout__successshow{
-    animation-name: sizeshow;
-    animation-duration: 0.5s;
-    animation-timing-function: ease;
-    height: 350px;
-    background: white;
-    border-radius: 4px;
-    text-align: center;
-    position: fixed;
-    margin-top: 100px;
-    width: 600px;
-
+.cartcheckout__cart-listitem {
+  max-height: 450px;
+  overflow: auto;
 }
-.fa-solid.fa-circle-check{
-    font-size: 65px;
-    color: #18bd5c;
-    margin-top: 30px;
+.cartcheckout__successshow {
+  animation-name: sizeshow;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
+  height: 350px;
+  background: white;
+  border-radius: 4px;
+  text-align: center;
+  position: fixed;
+  margin-top: 100px;
+  width: 600px;
 }
-.cartcheckout__suceesshow-button{
-    height: 40px;
-    width: 240px;
-    background: #18bd5c;
-    color: white;
-    outline: none;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.fa-solid.fa-circle-check {
+  font-size: 65px;
+  color: #18bd5c;
+  margin-top: 30px;
+}
+.cartcheckout__suceesshow-button {
+  height: 40px;
+  width: 240px;
+  background: #18bd5c;
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
